--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,9 @@
                     <div class="chat-container">
                         <div class="messages" id="messages"></div>
                         <div class="current-transcript" id="currentTranscript"></div>
+                        <div class="text-input-row">
+                            <input type="text" id="textInput" placeholder="Type a message and press Enter" autocomplete="off" />
+                        </div>
                     </div>
                 </section>
 
