--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,13 @@
                         <div class="messages" id="messages"></div>
                         <div class="current-transcript" id="currentTranscript"></div>
                         <div class="text-input-row">
-                            <input type="text" id="textInput" placeholder="Type a message and press Enter" autocomplete="off" />
+                            <input type="text" id="textInput" placeholder="Type a message..." autocomplete="off" />
+                            <button type="button" id="sendButton" class="send-button">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <line x1="22" y1="2" x2="11" y2="13"></line>
+                                    <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </section>
