Feat: add multi language support

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,9 +13,16 @@
     <header class="header">
         <div class="container">
             <h1 class="logo">Aprendemo</h1>
-            <div class="status-indicator">
-                <span class="status-dot" id="statusDot"></span>
-                <span class="status-text" id="statusText">Connecting...</span>
+            <div class="header-controls">
+                <div class="language-selector">
+                    <select id="languageSelect" class="language-dropdown" disabled>
+                        <option value="es">🇲🇽 Spanish</option>
+                    </select>
+                </div>
+                <div class="status-indicator">
+                    <span class="status-dot" id="statusDot"></span>
+                    <span class="status-text" id="statusText">Connecting...</span>
+                </div>
             </div>
         </div>
     </header>
